Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22997

Property lookup from JavaScript in extended types doesn't always work

XMLWordPrintable

      The attached test-case is a patch to the auto-tests to reproduce the issue. I'll also elaborate here what's going on:

      QtObject {
      id: root
      property MyExtendedObject a;
      a: MyExtendedObject

      { id: obj extendedProperty: 42; }

      function getValue()

      { return obj.extendedProperty; }

      }

      Calling getValue() will fail and not return the expected value of 42.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            aakenned Aaron Kennedy
            shausman Simon Hausmann
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes