Fix QObject V8 wrapping for extended types

The meta object for extended types must be marked as dynamic, to prevent
their properties from being marked as IsDirect.

Task-number: QTBUG-22997
Change-Id: I825f94f072cb46981706221a1044c9e2feeedcc2
Reviewed-by: Simon Hausmann <simon.hausmann@nokia.com>
Reviewed-by: Aaron Kennedy <aaron.kennedy@nokia.com>